docs: transactional email API routes
